[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>", "Voronov Pavel <self@bopohob.ru>"]
description = "A simple math expression parser and evaluator."
documentation = "https://docs.rs/meval"
homepage = "https://github.com/BOPOHOB/meval-rs"
keywords = ["math", "parser", "expression", "formula", "evaluator", "time"]
license = "Unlicense/MIT"
name = "meval"
readme = "README.md"
repository = "https://github.com/BOPOHOB/meval-rs"
version = "0.2.1"
exclude = ["README.tpl", ".travis.yml"]

[dependencies]
fnv = "1.0.7"
nom = "1.0.0"
serde = { version = "1", optional = true }

[dev-dependencies]
gnuplot = "0.0.23"
serde_test = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4.5"

[features]
default = []

[package.metadata.docs.rs]
features = [ "serde" ]
